--- a/index.html
+++ b/index.html
@@ -6,43 +6,21 @@
     <title>Image Gallery</title>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="thumb-container"></div>
-    <!-- <img src="" alt="" id="display" /> -->
-    <!-- <a>
-      <div id="image-track">
-        <img
-          class="image"
-          src="./images/alex-nicolopoulos-4S8FQPziekE-unsplash.jpg"
-        />
-        <img
-          class="image"
-          src="./images/brandon-holmes-GofYo51GQ_4-unsplash.jpg"
-        />
-        <img
-          class="image"
-          src="./images/dynamic-wang-HEIUW9mM6_Q-unsplash.jpg"
-        />
-        <img
-          class="image"
-          src="./images/markus-spiske-hsewaOcmAlE-unsplash.jpg"
-        />
-        <img
-          class="image"
-          src="./images/prateek-katyal-Ig9qwvgknLI-unsplash.jpg"
-        />
-        <img
-          class="image"
-          src="./images/sam-operchuck-aaTFObM39wo-unsplash.jpg"
-        />
-      </div>
-    </a> -->
+    <img src="" alt="" id="display" />
 
-    <!-- <button id="next" aria-label="Go to the next image">next</button>
+    <button id="next" aria-label="Go to the next image">next</button>
 
-    <button id="prev" aria-label="Go to the previous image">previous</button> -->
-    <!-- 
+    <button id="prev" aria-label="Go to the previous image">previous</button>
+
     <div class="text">
       liminal spaces are empty or abandoned places that appear eerie, forlorn,
       and often surreal. Liminal spaces are commonly places of transition,
@@ -51,6 +29,6 @@
       emotionally, or metaphorically. To be in a liminal space means to be on
       the precipice of something new but not quite there yet. The word "liminal"
       comes from the Latin word “limen,” which means threshold.
-    </div> -->
+    </div>
   </body>
 </html>
